loads (hopefully) a global css file

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>votacao</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400i|IBM+Plex+Sans:400,400i,700,700i"
+      rel="stylesheet"
+    />
+    <title>Sistema de Votação</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but votacao doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      Sentimos muito mas para acessar este site é preciso estar com o Javascript
+      habilitado em seu navegador.
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
